Remove old funju-brandbook.html file

--- a/index.html
+++ b/index.html
@@ -812,28 +812,22 @@
                     </p>
                 </div>
                 <div class="photo-grid">
-                    <div class="photo-example" style="background: linear-gradient(135deg, #E63946, #FF6B9D);">
-                        🥂
+                    <div class="photo-example" style="background: linear-gradient(135deg, #E63946, #FF6B9D); background-image: url('images/social_moments.jpg'); background-size: cover; background-position: center;">
                         <div class="photo-label">Соціальні моменти</div>
                     </div>
-                    <div class="photo-example" style="background: linear-gradient(135deg, #1A1A2E, #0A3A5C);">
-                        🌃
+                    <div class="photo-example" style="background: linear-gradient(135deg, #1A1A2E, #0A3A5C); background-image: url('images/neon_night.jpg'); background-size: cover; background-position: center;">
                         <div class="photo-label">Неонова ніч</div>
                     </div>
-                    <div class="photo-example" style="background: linear-gradient(135deg, #16DB93, #FFB347);">
-                        🍜
+                    <div class="photo-example" style="background: linear-gradient(135deg, #16DB93, #FFB347); background-image: url('images/korean_food.jpg'); background-size: cover; background-position: center;">
                         <div class="photo-label">Корейська їжа</div>
                     </div>
-                    <div class="photo-example" style="background: linear-gradient(135deg, #FF6B9D, #E63946);">
-                        🎉
+                    <div class="photo-example" style="background: linear-gradient(135deg, #FF6B9D, #E63946); background-image: url('images/celebration.jpg'); background-size: cover; background-position: center;">
                         <div class="photo-label">Свята</div>
                     </div>
-                    <div class="photo-example" style="background: linear-gradient(135deg, #0A3A5C, #1A1A2E);">
-                        🌆
+                    <div class="photo-example" style="background: linear-gradient(135deg, #0A3A5C, #1A1A2E); background-image: url('images/city_scenes.jpg'); background-size: cover; background-position: center;">
                         <div class="photo-label">Міські сцени</div>
                     </div>
-                    <div class="photo-example" style="background: linear-gradient(135deg, #FFB347, #E63946);">
-                        🥰
+                    <div class="photo-example" style="background: linear-gradient(135deg, #FFB347, #E63946); background-image: url('images/toasts.jpg'); background-size: cover; background-position: center;">
                         <div class="photo-label">Тости та зв'язки</div>
                     </div>
                 </div>
