--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #1a1a2e, #0a3a5c);
-                background-image: url('images/neon_night.jpg');
+                background-image: url('images/splash.jpg');
                 background-size: cover;
                 background-position: center;
               "
@@ -1000,7 +1000,7 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #0a3a5c, #1a1a2e);
-                background-image: url('images/city_scenes.jpg');
+                background-image: url('images/social_moments.jpg');
                 background-size: cover;
                 background-position: center;
               "
@@ -1011,7 +1011,7 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #ffb347, #e63946);
-                background-image: url('images/toasts.jpg');
+                background-image: url('images/k_pop.jpeg');
                 background-size: cover;
                 background-position: center;
               "
@@ -1213,122 +1213,130 @@
       <div class="slide slide-8" data-slide="8">
         <div class="slide-content">
           <h2 class="section-title">Moodboard</h2>
-          <p style="font-size: 18px; color: rgba(255,255,255,0.7); margin-bottom: 20px;">Візуальний настрій та атмосфера бренду FUNJU</p>
+          <p
+            style="
+              font-size: 18px;
+              color: rgba(255, 255, 255, 0.7);
+              margin-bottom: 20px;
+            "
+          >
+            Візуальний настрій та атмосфера бренду FUNJU
+          </p>
 
           <div class="masonry-grid">
             <div class="masonry-item">
-              <img src="moodboard/1.jpg" alt="Moodboard 1">
+              <img src="moodboard/1.jpg" alt="Moodboard 1" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/2.jpg" alt="Moodboard 2">
+              <img src="moodboard/2.jpg" alt="Moodboard 2" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/3.jpg" alt="Moodboard 3">
+              <img src="moodboard/3.jpg" alt="Moodboard 3" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/4.jpg" alt="Moodboard 4">
+              <img src="moodboard/4.jpg" alt="Moodboard 4" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/5.jpg" alt="Moodboard 5">
+              <img src="moodboard/5.jpg" alt="Moodboard 5" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/6.jpg" alt="Moodboard 6">
+              <img src="moodboard/6.jpg" alt="Moodboard 6" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/7.jpg" alt="Moodboard 7">
+              <img src="moodboard/7.jpg" alt="Moodboard 7" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/8.jpg" alt="Moodboard 8">
+              <img src="moodboard/8.jpg" alt="Moodboard 8" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/9.jpg" alt="Moodboard 9">
+              <img src="moodboard/9.jpg" alt="Moodboard 9" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/10.jpg" alt="Moodboard 10">
+              <img src="moodboard/10.jpg" alt="Moodboard 10" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/11.jpg" alt="Moodboard 11">
+              <img src="moodboard/11.jpg" alt="Moodboard 11" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/12.jpg" alt="Moodboard 12">
+              <img src="moodboard/12.jpg" alt="Moodboard 12" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/13.jpg" alt="Moodboard 13">
+              <img src="moodboard/13.jpg" alt="Moodboard 13" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/14.jpg" alt="Moodboard 14">
+              <img src="moodboard/14.jpg" alt="Moodboard 14" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/15.jpg" alt="Moodboard 15">
+              <img src="moodboard/15.jpg" alt="Moodboard 15" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/16.jpg" alt="Moodboard 16">
+              <img src="moodboard/16.jpg" alt="Moodboard 16" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/17.jpg" alt="Moodboard 17">
+              <img src="moodboard/17.jpg" alt="Moodboard 17" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/18.jpg" alt="Moodboard 18">
+              <img src="moodboard/18.jpg" alt="Moodboard 18" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/19.jpg" alt="Moodboard 19">
+              <img src="moodboard/19.jpg" alt="Moodboard 19" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/20.jpg" alt="Moodboard 20">
+              <img src="moodboard/20.jpg" alt="Moodboard 20" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/21.jpg" alt="Moodboard 21">
+              <img src="moodboard/21.jpg" alt="Moodboard 21" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/22.jpg" alt="Moodboard 22">
+              <img src="moodboard/22.jpg" alt="Moodboard 22" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/23.jpg" alt="Moodboard 23">
+              <img src="moodboard/23.jpg" alt="Moodboard 23" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/24.jpg" alt="Moodboard 24">
+              <img src="moodboard/24.jpg" alt="Moodboard 24" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/25.jpg" alt="Moodboard 25">
+              <img src="moodboard/25.jpg" alt="Moodboard 25" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/26.jpg" alt="Moodboard 26">
+              <img src="moodboard/26.jpg" alt="Moodboard 26" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/27.jpg" alt="Moodboard 27">
+              <img src="moodboard/27.jpg" alt="Moodboard 27" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/28.jpg" alt="Moodboard 28">
+              <img src="moodboard/28.jpg" alt="Moodboard 28" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/29.jpg" alt="Moodboard 29">
+              <img src="moodboard/29.jpg" alt="Moodboard 29" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/30.jpg" alt="Moodboard 30">
+              <img src="moodboard/30.jpg" alt="Moodboard 30" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/31.jpg" alt="Moodboard 31">
+              <img src="moodboard/31.jpg" alt="Moodboard 31" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/32.jpg" alt="Moodboard 32">
+              <img src="moodboard/32.jpg" alt="Moodboard 32" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/33.jpg" alt="Moodboard 33">
+              <img src="moodboard/33.jpg" alt="Moodboard 33" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/34.jpg" alt="Moodboard 34">
+              <img src="moodboard/34.jpg" alt="Moodboard 34" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/35.jpg" alt="Moodboard 35">
+              <img src="moodboard/35.jpg" alt="Moodboard 35" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/36.jpg" alt="Moodboard 36">
+              <img src="moodboard/36.jpg" alt="Moodboard 36" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/37.jpg" alt="Moodboard 37">
+              <img src="moodboard/37.jpg" alt="Moodboard 37" />
             </div>
             <div class="masonry-item">
-              <img src="moodboard/38.jpg" alt="Moodboard 38">
+              <img src="moodboard/38.jpg" alt="Moodboard 38" />
             </div>
           </div>
         </div>
