--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #e63946, #ff6b9d);
-                background-image: url('images/social_moments.jpg');
+                background-image: url('images/splash.jpg');
                 background-size: cover;
                 background-position: center;
               "
@@ -967,7 +967,7 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #1a1a2e, #0a3a5c);
-                background-image: url('images/splash.jpg');
+                background-image: url('images/neon_night.jpg');
                 background-size: cover;
                 background-position: center;
               "
@@ -989,7 +989,7 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #ff6b9d, #e63946);
-                background-image: url('images/celebration.jpg');
+                background-image: url('images/social_moments.jpg');
                 background-size: cover;
                 background-position: center;
               "
@@ -1000,7 +1000,7 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #0a3a5c, #1a1a2e);
-                background-image: url('images/social_moments.jpg');
+                background-image: url('images/k_pop.jpeg');
                 background-size: cover;
                 background-position: center;
               "
@@ -1011,7 +1011,7 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #ffb347, #e63946);
-                background-image: url('images/k_pop.jpeg');
+                background-image: url('images/fashion.jpg');
                 background-size: cover;
                 background-position: center;
               "
