--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #ff6b9d, #e63946);
-                background-image: url('images/social_moments.jpg');
+                background-image: url('images/celebration.jpg');
                 background-size: cover;
                 background-position: center;
               "
