--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
         <div class="slide-content">
           <div class="korean-text">소주</div>
           <h1 class="cover-title">FUNJU</h1>
-          <p class="cover-subtitle">Корейський дух. Українська душа.</p>
+          <p class="cover-subtitle">Made for Fun.</p>
           <p
             style="
               font-size: 18px;
@@ -734,24 +734,25 @@
               <div class="essence-icon">🎯</div>
               <h3>Цільова аудиторія</h3>
               <p>
-                Українці 21-35 років, фани K-pop, K-drama, корейської культури.
-                Цінують автентичність та естетику.
+                Чоловіки та жінки 25+ Є постійними відвідувачами різноманітних
+                кафе і барів (HoReCa Goers) та регулярними споживачами коктейлів
+                та слабоалкогольних напоїв (включно з вином)
               </p>
             </div>
             <div class="essence-card">
               <div class="essence-icon">✨</div>
               <h3>Позиціонування</h3>
               <p>
-                Преміальний соджу з сучасним дизайном. Міст між корейською та
-                українською культурою.
+                Преміальний соджу, відтворений у відповідності з оригінальною
+                корейською рецептурою за доступною для українців ціною
               </p>
             </div>
             <div class="essence-card">
               <div class="essence-icon">💚</div>
               <h3>Обіцянка</h3>
               <p>
-                Відчуй дух Кореї — плавний, смачний, культурно насичений. Кожна
-                пляшка — історія.
+                Відчуй вайб Кореї — плавний, смачний, культурно насичений. Кожна
+                пляшка — додає фану.
               </p>
             </div>
           </div>
@@ -762,7 +763,7 @@
       <!-- Slide 3: Colors -->
       <div class="slide slide-3" data-slide="3">
         <div class="slide-content">
-          <h2 class="section-title">Колірна палітра</h2>
+          <h2 class="section-title">Палітра кольорів</h2>
           <div class="color-grid">
             <div class="color-card">
               <div class="color-swatch" style="background: #e63946">❤️</div>
@@ -1492,10 +1493,7 @@
           <div class="final-message">
             <h1 class="final-title">FUNJU</h1>
             <p class="final-korean">소주와 함께</p>
-            <p class="final-tagline">
-              Корейський дух. Українська душа.<br />
-              Глобальне святкування.
-            </p>
+            <p class="final-tagline">Made for Fun</p>
             <div
               style="
                 margin-top: 80px;
