--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
               "
             >
               <div class="photo-label">
-                Анімація сплеску, рух, графіка текучості для веб та діджитал
+                Анімація сплеску для веб та діджитал
               </div>
             </div>
             <div
