Replace Сплеск Соджу pattern with splash.jpg image

--- a/index.html
+++ b/index.html
@@ -734,9 +734,10 @@
               <div class="essence-icon">🎯</div>
               <h3>Цільова аудиторія</h3>
               <p>
-                Чоловіки та жінки 25+ Є постійними відвідувачами різноманітних
-                кафе і барів (HoReCa Goers) та регулярними споживачами коктейлів
-                та слабоалкогольних напоїв (включно з вином)
+                Чоловіки та жінки 25+. <br />
+                Є постійними відвідувачами різноманітних кафе і барів (HoReCa
+                Goers) та регулярними споживачами коктейлів та слабоалкогольних
+                напоїв (включно з вином).
               </p>
             </div>
             <div class="essence-card">
@@ -744,7 +745,7 @@
               <h3>Позиціонування</h3>
               <p>
                 Преміальний соджу, відтворений у відповідності з оригінальною
-                корейською рецептурою за доступною для українців ціною
+                корейською рецептурою за доступною для українців ціною.
               </p>
             </div>
             <div class="essence-card">
@@ -782,7 +783,7 @@
             <div class="color-card">
               <div class="color-swatch" style="background: #1a1a2e">🌙</div>
               <div class="color-info">
-                <div class="color-name" style="color: #1a1a2e">Ніч Сеула</div>
+                <div class="color-name" style="color: #9a9ab4">Ніч Сеула</div>
                 <div class="color-values">
                   HEX: #1A1A2E<br />
                   RGB: 26, 26, 46<br />
@@ -955,14 +956,12 @@
               class="photo-example"
               style="
                 background: linear-gradient(135deg, #e63946, #ff6b9d);
-                background-image: url('images/splash.jpg');
+                background-image: url('images/social_moments.jpg');
                 background-size: cover;
                 background-position: center;
               "
             >
-              <div class="photo-label">
-                Анімація сплеску для веб та діджитал
-              </div>
+              <div class="photo-label">Корейські ігри з coтжу</div>
             </div>
             <div
               class="photo-example"
@@ -1079,7 +1078,7 @@
                 <span style="position: relative; z-index: 1">🎏</span>
               </div>
               <div class="pattern-info">
-                <div class="pattern-name">Гамет Тхеджангмачха</div>
+                <div class="pattern-name">Hамет Поджангмача</div>
                 <div class="pattern-desc">
                   Діагональні смуги, натхненні тентами корейських вуличних
                   закусочних. Використання: Фони, упаковка, мерч.
@@ -1111,10 +1110,7 @@
               </div>
             </div>
             <div class="pattern-card">
-              <div class="pattern-visual pattern-bg-4">
-                <span style="position: relative; z-index: 1; font-size: 120px"
-                  >🌈</span
-                >
+              <div class="pattern-visual" style="background-image: url('images/splash.jpg'); background-size: cover; background-position: center;">
               </div>
               <div class="pattern-info">
                 <div class="pattern-name">Сплеск Соджу</div>
@@ -1530,7 +1526,7 @@
                   02
                 </div>
                 <div style="font-size: 18px; color: rgba(255, 255, 255, 0.8)">
-                  Сучасний<br />дизайн
+                  Сучасний<br />вайб
                 </div>
               </div>
               <div>
