--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
               margin-top: 40px;
             "
           >
-            Брендбук 2025 | Запуск преміального соджу в Україні
+            DigitalБрендбук 2025 | Запуск преміального соджу в Україні
           </p>
         </div>
         <div class="slide-number">01 / 10</div>
@@ -737,7 +737,7 @@
                 Чоловіки та жінки 25+. <br />
                 Є постійними відвідувачами різноманітних кафе і барів (HoReCa
                 Goers) та регулярними споживачами коктейлів та слабоалкогольних
-                напоїв (включно з вином).
+                напоїв (вино включно).
               </p>
             </div>
             <div class="essence-card">
@@ -961,7 +961,7 @@
                 background-position: center;
               "
             >
-              <div class="photo-label">Корейські ігри з coтжу</div>
+              <div class="photo-label">Корейські ігри з coджу</div>
             </div>
             <div
               class="photo-example"
@@ -1075,7 +1075,7 @@
           <div class="pattern-grid">
             <div class="pattern-card">
               <div class="pattern-visual pattern-bg-1">
-                <span style="position: relative; z-index: 1">🎏</span>
+                <span style="position: relative; z-index: 1"></span>
               </div>
               <div class="pattern-info">
                 <div class="pattern-name">Hамет Поджангмача</div>
@@ -1087,7 +1087,7 @@
             </div>
             <div class="pattern-card">
               <div class="pattern-visual pattern-bg-2">
-                <span style="position: relative; z-index: 1">✨</span>
+                <span style="position: relative; z-index: 1"></span>
               </div>
               <div class="pattern-info">
                 <div class="pattern-name">Неонова сітка Сеула</div>
@@ -1099,7 +1099,7 @@
             </div>
             <div class="pattern-card">
               <div class="pattern-visual pattern-bg-3">
-                <span style="position: relative; z-index: 1">🏮</span>
+                <span style="position: relative; z-index: 1"></span>
               </div>
               <div class="pattern-info">
                 <div class="pattern-name">Тканина Ханбок</div>
@@ -1110,8 +1110,14 @@
               </div>
             </div>
             <div class="pattern-card">
-              <div class="pattern-visual" style="background-image: url('images/splash.jpg'); background-size: cover; background-position: center;">
-              </div>
+              <div
+                class="pattern-visual"
+                style="
+                  background-image: url('images/splash.jpg');
+                  background-size: cover;
+                  background-position: center;
+                "
+              ></div>
               <div class="pattern-info">
                 <div class="pattern-name">Сплеск Соджу</div>
                 <div class="pattern-desc">
