Add key visual slide after cover with kv.jpg image

--- a/index.html
+++ b/index.html
@@ -140,6 +140,27 @@
         margin-bottom: 60px;
       }
 
+      /* Slide 1.5 - Key Visual */
+      .slide-1-5 {
+        background: #0a0a0a;
+        padding: 0;
+      }
+
+      .kv-container {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+      }
+
+      .kv-image {
+        max-width: 90%;
+        max-height: 90vh;
+        object-fit: contain;
+      }
+
       /* Slide 2 - Brand Essence */
       .slide-2 {
         background: #1a1a2e;
@@ -711,7 +732,7 @@
         <div class="slide-content">
           <div class="korean-text">소주</div>
           <h1 class="cover-title">FUNJU</h1>
-          <p class="cover-subtitle">Made for Fun.</p>
+
           <p
             style="
               font-size: 18px;
@@ -722,7 +743,15 @@
             Digital Брендбук 2025 | Запуск преміального соджу в Україні
           </p>
         </div>
-        <div class="slide-number">01 / 10</div>
+        <div class="slide-number">01 / 11</div>
+      </div>
+
+      <!-- Slide 1.5: Key Visual -->
+      <div class="slide slide-1-5" data-slide="1.5">
+        <div class="kv-container">
+          <img src="images/kv.jpg" alt="FUNJU Key Visual" class="kv-image">
+        </div>
+        <div class="slide-number">02 / 11</div>
       </div>
 
       <!-- Slide 2: Brand Essence -->
@@ -758,7 +787,7 @@
             </div>
           </div>
         </div>
-        <div class="slide-number">02 / 10</div>
+        <div class="slide-number">03 / 11</div>
       </div>
 
       <!-- Slide 3: Colors -->
@@ -848,7 +877,7 @@
             </div>
           </div>
         </div>
-        <div class="slide-number">03 / 10</div>
+        <div class="slide-number">04 / 11</div>
       </div>
 
       <!-- Slide 4: Typography -->
@@ -928,7 +957,7 @@
             </span>
           </div>
         </div>
-        <div class="slide-number">04 / 10</div>
+        <div class="slide-number">05 / 11</div>
       </div>
 
       <!-- Slide 5: Creative Direction -->
@@ -1065,7 +1094,7 @@
             </div>
           </div>
         </div>
-        <div class="slide-number">05 / 10</div>
+        <div class="slide-number">06 / 11</div>
       </div>
 
       <!-- Slide 6: Patterns -->
@@ -1128,7 +1157,7 @@
             </div>
           </div>
         </div>
-        <div class="slide-number">06 / 10</div>
+        <div class="slide-number">07 / 11</div>
       </div>
 
       <!-- Slide 7: Cultural Elements -->
@@ -1209,7 +1238,7 @@
             </p>
           </div>
         </div>
-        <div class="slide-number">07 / 10</div>
+        <div class="slide-number">08 / 11</div>
       </div>
 
       <!-- Slide 8: Moodboard -->
@@ -1325,7 +1354,7 @@
             </div>
           </div>
         </div>
-        <div class="slide-number">08 / 10</div>
+        <div class="slide-number">09 / 11</div>
       </div>
 
       <!-- Slide 9: Website Mockup -->
@@ -1486,7 +1515,7 @@
             </div>
           </div>
         </div>
-        <div class="slide-number">09 / 10</div>
+        <div class="slide-number">10 / 11</div>
       </div>
 
       <!-- Slide 10: Final -->
@@ -1576,7 +1605,7 @@
             </div>
           </div>
         </div>
-        <div class="slide-number">10 / 10</div>
+        <div class="slide-number">11 / 11</div>
       </div>
     </div>
 
