--- a/index.html
+++ b/index.html
@@ -15,23 +15,38 @@
         box-sizing: border-box;
       }
 
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+
+      html {
+        overflow-x: hidden;
+        width: 100%;
+      }
+
       body {
         font-family: "Montserrat", sans-serif;
         background: #0a0a0a;
         color: #fff;
         overflow-x: hidden;
+        width: 100%;
+        position: relative;
       }
 
       .presentation {
-        width: 100vw;
+        width: 100%;
+        max-width: 100vw;
         height: 100vh;
         overflow-y: scroll;
+        overflow-x: hidden;
         scroll-snap-type: y mandatory;
         scroll-behavior: smooth;
       }
 
       .slide {
         width: 100%;
+        max-width: 100vw;
         min-height: 100vh;
         display: flex;
         align-items: center;
@@ -39,11 +54,13 @@
         scroll-snap-align: start;
         position: relative;
         padding: 60px;
+        overflow-x: hidden;
       }
 
       .slide-content {
         max-width: 1400px;
         width: 100%;
+        overflow-x: hidden;
       }
 
       /* Navigation */
@@ -178,6 +195,7 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 40px;
         margin-top: 60px;
+        width: 100%;
       }
 
       .essence-card {
@@ -187,6 +205,8 @@
         padding: 40px;
         backdrop-filter: blur(10px);
         transition: all 0.3s;
+        min-width: 0;
+        word-wrap: break-word;
       }
 
       .essence-card:hover {
@@ -222,12 +242,14 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 30px;
         margin-top: 40px;
+        width: 100%;
       }
 
       .color-card {
         border-radius: 20px;
         overflow: hidden;
         box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+        min-width: 0;
       }
 
       .color-swatch {
@@ -315,6 +337,7 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
         margin-top: 40px;
+        width: 100%;
       }
 
       .photo-example {
@@ -350,6 +373,7 @@
         grid-template-columns: repeat(2, 1fr);
         gap: 30px;
         margin-top: 40px;
+        width: 100%;
       }
 
       .pattern-card {
@@ -434,6 +458,7 @@
         grid-template-columns: repeat(2, 1fr);
         gap: 30px;
         margin-top: 40px;
+        width: 100%;
       }
 
       .culture-card {
@@ -670,7 +695,7 @@
       /* Responsive */
       @media (max-width: 1024px) {
         .slide {
-          padding: 40px;
+          padding: 30px 20px;
         }
 
         .cover-title {
@@ -686,25 +711,37 @@
         .photo-grid,
         .illustration-grid {
           grid-template-columns: repeat(2, 1fr);
+          gap: 20px;
         }
 
         .masonry-grid {
           column-count: 2;
+          column-gap: 15px;
         }
 
         .typography-showcase,
         .pattern-grid,
         .culture-grid {
           grid-template-columns: 1fr;
+          gap: 20px;
+        }
+
+        .kv-image {
+          max-width: 95%;
         }
       }
 
       @media (max-width: 768px) {
+        .slide {
+          padding: 20px 15px;
+        }
+
         .essence-grid,
         .color-grid,
         .photo-grid,
         .illustration-grid {
           grid-template-columns: 1fr;
+          gap: 15px;
         }
 
         .masonry-grid {
@@ -712,15 +749,58 @@
         }
 
         .cover-title {
-          font-size: 60px;
+          font-size: 48px;
+          letter-spacing: -2px;
         }
 
         .section-title {
-          font-size: 36px;
+          font-size: 32px;
+          margin-bottom: 30px;
+        }
+
+        .korean-text {
+          font-size: 32px;
+          margin-bottom: 30px;
         }
 
         .nav {
+          right: 10px;
+          gap: 8px;
+        }
+
+        .nav-dot {
+          width: 10px;
+          height: 10px;
+        }
+
+        .slide-number {
+          bottom: 20px;
           right: 20px;
+          font-size: 12px;
+        }
+
+        .kv-image {
+          max-width: 100%;
+          max-height: 80vh;
+        }
+
+        .culture-card,
+        .essence-card,
+        .color-card,
+        .pattern-card {
+          padding: 20px;
+        }
+
+        .mockup-hero {
+          font-size: 48px;
+        }
+
+        .final-title {
+          font-size: 64px;
+        }
+
+        .final-korean {
+          font-size: 32px;
         }
       }
     </style>
